# 64os

./: .gitignore  CMakeLists.txt  README.md
buildenv/: Dockerfile
src/impl/: print.c
src/impl/kernel/: main.c
src/impl/x86_64/boot/: header.asm  main.asm  main64.asm
src/intf/: print.h
targets/x86_64/: linker.ld
targets/x86_64/iso/boot/grub/: grub.cfg
